# TerimalRtdm

./: Cargo.toml  README.md  documentation.md
src/: lib.rs
