
[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[lib]
path = "src/lib.rs"

[package]
name = "TerimalRtdm"
version = "0.0.1"
edition = "2021"
authors = ["Hadrian Lazic"]
description = "Lightwight, Simple, Easy to read, Ideomatic Rust Terimal Interface Library for CUIs"
license = "MIT"
repository = "https://github.com/had2020/TerimalRtdm"
keywords = ["cui", "tui", "terminal", "console", "cli"]
categories = [
    "gui",
    "rendering",
    "command-line-interface",
    "command-line-utilities",
]
